--- a/ApacheDocUtils/pom.xml
+++ b/ApacheDocUtils/pom.xml
@@ -48,6 +48,41 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.4</version>
     </dependency>
+   
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aspose/aspose.words -->
+		<!-- https://mvnrepository.com/artifact/com.aspose/aspose.words -->
+		<dependency>
+			<groupId>com.aspose</groupId>
+			<artifactId>aspose.words</artifactId>
+			<version>11.1.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
   </dependencies>
 
 
