--- a/ApacheDocUtils/pom.xml
+++ b/ApacheDocUtils/pom.xml
@@ -83,6 +83,46 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>easywsdl-schema</groupId>
+			<artifactId>easywsdl-schema</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>easywsdl-wsdl</groupId>
+			<artifactId>easywsdl-wsdl</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxb-api</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxb-impl</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.1.10</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3</version>
+		</dependency> -->
+		<dependency>
+			<groupId>runtime</groupId>
+			<artifactId>runtime</artifactId>
+			<version>0.4.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>stax-api</groupId>
+			<artifactId>stax-api</artifactId>
+			<version>1.0-2</version>
+		</dependency>
   </dependencies>
 
 
